# Nova

./: README.md  package-lock.json  package.json
src/: assistant.js  chat.js  functions.js  index.html  main.js  welcome.html  welcome.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/css/: style.css
src/data/: applications.json  bugcodes.json  crisis_hotlines.json  default_applications.json  requests.json  responses.json  tasks.json
src/js/: summarizer.js
src/tts/: sherpa-onnx-wasm-main-tts.js
