[package]
name = "Nova"
version = "1.0.0"
description = "Nova is an AI assistant created to enhance Windows experience"
authors = ["Sandun Wiratunga"]
license = ""
repository = "https://github.com/sandunwira/Nova"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
tauri-bundler = "1.4.5"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.0", features = [ "window-start-dragging", "window-set-decorations", "window-set-resizable", "window-close", "window-set-title", "window-set-closable", "window-set-always-on-top", "window-center", "window-set-size", "window-create", "system-tray", "dialog-all", "os-all", "notification-all", "fs-all", "shell-open"] }
winapi = { version = "0.3", features = ["winuser"] }
sysinfo = "0.32.0"
runas = "1.2.0"
walkdir = "2.5.0"
winreg = "0.52.0"
screenshot_desktop = "0.1.0"
dirs = "5.0.1"
chrono = "0.4.38"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
